<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.vcu.quickgen.fragments.ScrambleDisplayFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="Medium Text"
        android:id="@+id/textScramble"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#0400ff"
        android:layout_gravity="center_horizontal|top" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate_button_text"
        android:id="@+id/translateButton"
        android:layout_gravity="center_horizontal" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notation Guide"
        android:id="@+id/notationGuideButton"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
