<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#000000"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/fragment_container"/>
    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="edu.vcu.quickgen.fragments.TimerFragment"
        android:id="@+id/timerFragment"
        android:layout_gravity="center_horizontal|top" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/stats_fragment"></LinearLayout>

</LinearLayout>



