<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.vcu.quickgen.fragments.StatsFragment"
    android:id="@+id/poop">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="Medium Text"
        android:id="@+id/statsInfo"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal|bottom" />

</FrameLayout>
